--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
+    "node": "^20.19.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
